Bug 374190 - Crash when attempting to change account institution information (Repeatable)
Summary: Crash when attempting to change account institution information (Repeatable)
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: 4.8.0
Platform: Ubuntu Linux
: NOR crash
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-12-27 00:22 UTC by dave
Modified: 2019-08-31 07:42 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.8.1,5.0.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description dave 2016-12-27 00:22:32 UTC
I created a loan account and forgot to assign it to the correct institution at the time.  Kmymoney created a generic "Accounts with no institution assigned" and put the account in it.
When I try to move the account by right clicking the account,>Edit Account>Next>Modify Loan Attributes>Next> then select the correct Institution from the drop down list and click Finish.
  Kmymoney crashes with "Uncaught error.Please report the details to developers".
Details:
Unknown schedule id 'SCH00001'in file
/build/kmymoney-8ALMks/kmymoney-4.8.0/kmymoney/mymoney/storage/mymoneyseqaccessmgr.cpp line 1,356
Clicking OK closes the program and opens the KMyMoney - The KDE Crash Handler window.
Comment 1 Thomas Baumgart 2016-12-27 10:05:36 UTC
Git commit 066e258c48e155c66e4f9c8107b6166c4ae80714 by Thomas Baumgart.
Committed on 27/12/2016 at 10:02.
Pushed by tbaumgart into branch '4.8'.

Fix editing loan account without schedule

In case a loan account used to have a schedule and that was deleted
behind the scenes, editing the loan account details failed (crashed the
application).
FIXED-IN: 4.8.1

M  +12   -3    kmymoney/kmymoney.cpp

https://commits.kde.org/kmymoney/066e258c48e155c66e4f9c8107b6166c4ae80714
Comment 2 dave 2016-12-28 13:07:02 UTC
Hi,

Is 4.8.1 available yet, and if so, where?

Thank you


On 12/27/2016 03:05 AM, Thomas Baumgart wrote:
> https://bugs.kde.org/show_bug.cgi?id=374190
>
> Thomas Baumgart <thb@net-bembel.de> changed:
>
>             What    |Removed                     |Added
> ----------------------------------------------------------------------------
>     Version Fixed In|                            |4.8.1
>        Latest Commit|                            |https://commits.kde.org/kmy
>                     |                            |money/066e258c48e155c66e4f9
>                     |                            |c8107b6166c4ae80714
>           Resolution|---                         |FIXED
>               Status|UNCONFIRMED                 |RESOLVED
>
> --- Comment #1 from Thomas Baumgart <thb@net-bembel.de> ---
> Git commit 066e258c48e155c66e4f9c8107b6166c4ae80714 by Thomas Baumgart.
> Committed on 27/12/2016 at 10:02.
> Pushed by tbaumgart into branch '4.8'.
>
> Fix editing loan account without schedule
>
> In case a loan account used to have a schedule and that was deleted
> behind the scenes, editing the loan account details failed (crashed the
> application).
> FIXED-IN: 4.8.1
>
> M  +12   -3    kmymoney/kmymoney.cpp
>
> https://commits.kde.org/kmymoney/066e258c48e155c66e4f9c8107b6166c4ae80714
>
Comment 3 Thomas Baumgart 2016-12-29 08:27:22 UTC
No, it is not yet available as installable package.