Fix editing loan account without schedule

In case a loan account used to have a schedule and that was deleted
behind the scenes, editing the loan account details failed (crashed the
application).

BUG: 374190
FIXED-IN: 4.8.1